# gotriple-extractor

./: .env_ex  .gitignore  README.md  benchmark.py  benchmarking.py  chunking.py  data_repr.py  entity_extraction.py  extraction.py  main.py  prompt.md  pyproject.toml  pyrightconfig.json  relation_extraction.py  stats.ipynb  utils.py
annotated_test/: anthro-bio.json  class.json  demo.json  info.json  litt.json  musiq.json  relig.json
annotated_test-full/: anthro-bio.json  anthro-bio_time.json  anthro-se.json  archeo.json  archi.json  art.json  art_time.json  class.json  demo.json  droit.json  eco.json  eco_time.json  envir_time.json  genre.json  geo.json  hisphilso.json  hist_time.json  info.json  info_time.json  litt.json  litt_time.json  manag.json  manag_time.json  museo.json  musiq.json  musiq_time.json  phil.json  psy.json  psy_time.json  relig.json  relig_time.json  scipo.json  scipo_time.json  socio.json  socio_time.json  stat.json  stat_time.json
benchmark/: analyze.py  data_preparation.py  run_benchmark.py  scier.parquet
benchmarking_data/: data_preparation.py
dataset/: build_dataset.py  languagesAndDisciplines.json
extracted_data/: anthro-bio_dataset.json  anthro-se_dataset.json  archeo_dataset.json  archi_dataset.json  art_dataset.json  class_dataset.json  demo_dataset.json  droit_dataset.json  eco_dataset.json  edu_dataset.json  envir_dataset.json  genre_dataset.json  geo_dataset.json  hisphilso_dataset.json  hist_dataset.json  info_dataset.json  lang_dataset.json  litt_dataset.json  manag_dataset.json  museo_dataset.json  phil_dataset.json  (+5 more)
(+185 files in other folders)
