[project]
name = "gotriple-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click!=8.3.0",
    "gliner>=0.2.21",
    "numpy<2.3",
    "pip>=25.3",
    "polars>=1.35.1",
    "pymupdf>=1.26.5",
    "spacy>=3.8.7",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers>=4.55.2",
]
