[project]
name = "gotriple-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "art>=6.5",
    "chonkie>=1.4.2",
    "click!=8.3.0",
    "dotenv>=0.9.9",
    "ftfy>=6.3.1",
    "gliner>=0.2.21",
    "glirel>=1.2.1",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy<2.3",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pip>=25.3",
    "polars>=1.35.1",
    "pydantic-ai>=1.22.0",
    "pymupdf>=1.26.5",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "termcolor>=3.2.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers>=4.55.2",
]
